Add assumptions page and improve frontend data loading
Added a new assumptions.html page detailing methodology and assumptions. Updated index.html to load assumptions content dynamically instead of using an iframe. Enhanced main.js to robustly load CSVs, handle errors, and fetch additional tables and assumptions content for improved frontend interactivity.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,7 +34,9 @@
     </section>
     <section id="assumptions">
       <h2>Assumptions & Methodology</h2>
-      <iframe src="../output/ASSUMPTIONS.md" width="100%" height="400"></iframe>
+      <div id="assumptions-content">
+        <p>Loading assumptions and methodology...</p>
+      </div>
     </section>
   </main>
   <footer>
